# mkdocs-yamp-plugin

./: .gitignore  Dockerfile  Justfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: release-drafter.yml
docs/: README.md  index.md
yamp/: __init__.py  plugin.py  repo_item.py
